@@ -25,29 +25,28 @@ if (preg_match("/destroy_fighters.php/i", $_SERVER['PHP_SELF'])) {
 function destroy_fighters ($db, $sector, $num_fighters)
 {
     global $db_logging;
-    $result3 = $db->Execute ("SELECT * FROM {$db->prefix}sector_defence WHERE sector_id='$sector' and defence_type ='F' order by quantity ASC");
+    $result3 = $db->Execute ("SELECT * FROM {$db->prefix}sector_defence WHERE sector_id=? AND defence_type ='F' ORDER BY quantity ASC;", array($sector));
     db_op_result ($db, $result3, __LINE__, __FILE__, $db_logging);
-    echo $db->ErrorMsg();
+#    echo $db->ErrorMsg();
 
     // Put the defence information into the array "defenceinfo"
-    if ($result3 > 0)
+    if ($result3 instanceof ADORecordSet)
     {
         while (!$result3->EOF && $num_fighters > 0)
         {
             $row = $result3->fields;
             if ($row['quantity'] > $num_fighters)
             {
-                $update = $db->Execute("UPDATE {$db->prefix}sector_defence set quantity=quantity - $num_fighters where defence_id = $row[defence_id]");
+                $update = $db->Execute("UPDATE {$db->prefix}sector_defence SET quantity=quantity - ? WHERE defence_id = ?;", array($num_fighters, $row['defence_id']));
                 db_op_result ($db, $update, __LINE__, __FILE__, $db_logging);
                 $num_fighters = 0;
             }
             else
             {
-                $update = $db->Execute("DELETE FROM {$db->prefix}sector_defence WHERE defence_id = $row[defence_id]");
+                $update = $db->Execute("DELETE FROM {$db->prefix}sector_defence WHERE defence_id = ?;", array($row['defence_id']));
                 db_op_result ($db, $update, __LINE__, __FILE__, $db_logging);
                 $num_fighters -= $row['quantity'];
             }
-
             $result3->MoveNext();
         }
     }
