@@ -21,6 +21,7 @@ Fixed Notice:  Undefined variable: langsh, l_killheadline, l_news_killed in db_k
 Fixed readmail.php was displaying \' instead of just ' (single quote)
 Fixed Notice:  Use of undefined constant name - assumed 'name' in main.php
 Fixed Notice:  Undefined variable: l_pr_clicktosort, l_sector, l_qty, l_n_a, l_md_toll in defence_report.php
+Fixed loads of errors in check_fighters.php, modify_defences.php, sector_fighters.php, destroy_fighters.php, message_defence_owner.php
 
 TheMightyDude (19 July 2012)
 --------------------------------------
